--- a/module03/ReportingApps/Northwind.ReportingServices.OData/Northwind.ReportingServices.OData.csproj
+++ b/module03/ReportingApps/Northwind.ReportingServices.OData/Northwind.ReportingServices.OData.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Northwind.CurrencyServices\Northwind.CurrencyServices.csproj" />
+    <ProjectReference Include="..\Northwind.ReportingServices\Northwind.ReportingServices.csproj" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
