--- a/module03/ReportingApps/ReportingApp/ReportingApp.csproj
+++ b/module03/ReportingApps/ReportingApp/ReportingApp.csproj
@@ -25,5 +25,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Northwind.ReportingServices.OData\Northwind.ReportingServices.OData.csproj" />
     <ProjectReference Include="..\Northwind.CurrencyServices\Northwind.CurrencyServices.csproj" />
+    <ProjectReference Include="..\Northwind.ReportingServices\Northwind.ReportingServices.csproj" />
   </ItemGroup>
 </Project>
